@startuml
class Client {
    + main()
}

class ObjectFactory #pink {
}

class PaymentService {
    + prepare()
}

interface ExchangeRateProvider {
    + getExchangeRate()
}
class HttpApiExchangeRateProvider {
    + getExchangeRate()
}
class SimpleExchangeRateProvider {
    + getExchangeRate()
}

Client .> PaymentService : 사용
Client ..> ObjectFactory : 요청
ObjectFactory ..> HttpApiExchangeRateProvider : 생성
ObjectFactory .> PaymentService : 생성/전달
PaymentService .r.> ExchangeRateProvider : 사용

ExchangeRateProvider <|.. HttpApiExchangeRateProvider
ExchangeRateProvider <|.. SimpleExchangeRateProvider
@enduml